more dev on getting 10 db readings from node

--- a/project2/client.html
+++ b/project2/client.html
@@ -246,6 +246,7 @@
 					hide_table();
 					$('#SourceScreen').text('Reply from Node.js: ');
 					var str = e.data
+					str = str.replace('noderead','');
 					var res = str.split("/");
 					var time = res[0]
 					var temp = res[1]
