--- a/project2/client.html
+++ b/project2/client.html
@@ -9,7 +9,7 @@
  		software. Michael Finale and the University of Colorado
  		are not liable for any misuse of this material.">
 		
-	<META NAME="copyright" CONTENT="Copyright (C) 2019 by Michael Finale>
+	<META NAME="copyright" CONTENT="Copyright (C) 2019 by Michael Finale">
 		
 	<META NAME="description" CONTENT="client.html: This html file styles the webpage and establishes a websocket to the python/tornado server at localhost:8888 
 		and a second websocket to the node.js server at localhost:8080.
