--- a/project2/client.html
+++ b/project2/client.html
@@ -18,7 +18,9 @@
 		-a button to retrieve the last temperature and humidity reading from the SQL database that is populated by the python/tornado application. This transaction is done via node.js
 		-a button the converts the temperature readings between Fahrenheit and Celsius for the above two functions.
 		-a button that plots the last 10 SQL database entries via the node.js server and python/tornado server. It also 
-		takes a timestamp of the start, end, and duration (in milliseconds) of each transaction.">
+		takes a timestamp of the start, end, and duration (in milliseconds) of each transaction. 
+		The launch.py application must be started before running this webpage.
+		The status of the node.js and tornado server are displayed at the footer.">
 	
 	<META NAME="viewport" content="width=device-width, initial-scale=1">
 									   
