updating button text

--- a/project3/client_project3.html
+++ b/project3/client_project3.html
@@ -322,7 +322,7 @@
 				<button type="button" onclick="get_single_sqs_message()">Get a single SQS record.</button>
 				<button type="button" onclick="get_all_sqs_message()">Get ALL SQS records.</button>
 				<button type="button" onclick="get_number_of_records()">Get number of records left in SQS queue.</button>
-				<button type="button" onclick="convert_temperature()">BLAH.</button>				
+				<button type="button" onclick="convert_temperature()">Convert unit of Temperature (°C/°F) .</button>				
 						
 			</ul>
 		  </nav>
