--- a/project3/client_project3.html
+++ b/project3/client_project3.html
@@ -246,7 +246,7 @@
 					  else {
 					  console.log("Record Deleted", data);
 					  //set a 4 second delay before requesting number of records
-					  $('#OutputScreen1').text("Retrieving number of reamining records in SQS.....")
+					  $('#OutputScreen1').text("Retrieving number of remaining records in SQS.....")
 					  setTimeout( function (){get_number_of_records();}, 4000);
 					  }
 					});
@@ -292,7 +292,7 @@
 						  }
 						}); 
 					}
-					$('#OutputScreen1').text("Retrieving number of reamining records in SQS.....")
+					$('#OutputScreen1').text("Retrieving number of remaining records in SQS.....")
 					setTimeout( function (){get_number_of_records();}, 4000);
 				}
 					
